--- a/pizza-legends/index.html
+++ b/pizza-legends/index.html
@@ -19,6 +19,8 @@
     ></canvas>
   </div>
   <script src="Overworld.js"></script>
+  <script src="GameObject.js"></script>
+  <script src="Sprite.js"></script>
   <script src="init.js"></script>
 
 </body>
